# ontology_fk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_WORKFLOW.md  LOAD_TESTING_SCENARIOS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_STARTUP_GUIDE.md  QUALITY_ASSURANCE_VALIDATION.md  QUALITY_ENGINEERING_STRATEGY.md  README.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WEEK2_IMPLEMENTATION_SUMMARY.md  WEEK3_IMPLEMENTATION_SUMMARY.md  WEEK4_COMPLETION_SUMMARY.md  WORKFLOW_EXECUTION_PLAN.md  WORKFLOW_GENERATION_SUMMARY.md  main.py  performance_optimization_strategy.md  pyproject.toml  run_performance_test.py  todo.md
.claude/: index.json
.github/workflows/: quality-assurance.yml
doc/: API_REFERENCE.md  API_REFERENCE_COMPLETE.md  API_REFERENCE_UPDATED.md  ARCHITECTURE_DESIGN.md  DATASOURCE_INTEGRATION_PLAN.md  DEPLOYMENT_GUIDE.md  PRODUCTION_MONITORING_GUIDE.md  USER_GUIDE.md
example/: performance_demo.py  performance_integration_demo.py  simple_performance_demo.py
example/order_delivery/: CLAUDE.md  duckdb_example.py  fastmcp_server.py  governance_scenario.py  pivot_vertex_demo.py  run.py  schema.py  simulation.py  verify_oag.py
examples/: CLAUDE.md  factory_ontology.py  performance_demo.py
scripts/: generate_api_docs.py  quality_monitor.py  run_quality_checks.sh  setup_dev_environment.sh  simple_api_generator.py
src/ontology_framework/: CLAUDE.md  __init__.py  applications.py  core.py  datasources.py  debug_tools.py  error_recovery.py  exceptions.py  functions.py  logging_config.py  optimized_core.py  osdk.py  performance.py  permissions.py  services.py
src/ontology_framework/performance/: __init__.py  cache.py  indexing.py  monitoring.py
src/ontology_framework/performance_dir/: __init__.py  cache.py  indexing.py  monitoring.py
tests/: conftest.py  test_actions.py  test_applications_extended.py  test_core.py  test_core_corrected.py  test_end_to_end_business.py  test_exceptions_and_recovery.py  test_functions_governance.py  test_functions_permissions.py  test_integration_cross_module.py  test_links.py  test_performance_benchmarks.py  test_performance_benchmarks_extended.py  test_performance_optimizations.py  test_services_basic.py  test_services_extended.py
tests/performance/: benchmark_runner.py
tests/unit/: test_core_extended.py
